# HandGestureRecognition

./: .gitignore  LICENSE.md  LICENSE.txt  README.md
emg_comm/: README.md  example.py  requirements.txt
emg_comm/Docs/: Architecture Diagram.xml  class_structure.mdj
emg_comm/emg_comm/: setup.py
emg_comm/emg_comm/emg_comm/: __init__.py  myo_acquisition.py  process_comm.py
pose_recognition/: README.md  Training_data.json  classifier.pickle  data_visualization.py  extraction_pipeline.pickle  isolating_batches.py  live_classification.py  model_training.py  parameter_search.py  process_raw_data.py  requirements.txt  rest_tresholds.json
pose_recognition/Docs/: Architecture Diagram.xml  signal anatomy.drawio
pose_recognition/pose_recognition/: setup.py
pose_recognition/pose_recognition/pose_recognition/: __init__.py  raw_data.py  training.py
pose_visualizer/: CMakeLists.txt  README.md  main.cpp  pose_display.cpp  pose_display.h
pose_visualizer/hand_poses/: index_finger_extended.yml  middle_finger_extended.yml  pinky_finger_extended.yml  ring_finger_extended.yml  straight_fingers.yml
